<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/register4"
        android:layout_width="107dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:enabled="true"
        android:onClick="returnClick"
        android:text="@string/action_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        app:layout_constraintVertical_bias="0.361" />

    <EditText
        android:id="@+id/balanceEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_amount"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="24dp"
        android:text="@string/balance"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="166dp"
        android:layout_height="63dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="48dp"
        android:text="@string/temp_balance"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deposit"
        android:layout_width="107dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="255dp"
        android:enabled="true"
        android:onClick="depositClick"
        android:text="@string/action_deposit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/withdraw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balanceEdit" />

    <Button
        android:id="@+id/withdraw"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="190dp"
        android:enabled="true"
        android:onClick="withdrawClick"
        android:text="@string/action_withdraw"
        app:layout_constraintBottom_toTopOf="@+id/register4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deposit"
        app:layout_constraintTop_toBottomOf="@+id/balanceEdit" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="166dp"
        android:layout_height="63dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="48dp"
        android:text="@string/temp_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="297dp"
        android:layout_height="66dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Transactions"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="65dp"
        android:onClick="historyScreen"
        android:text="@string/action_history"
        app:layout_constraintBottom_toTopOf="@+id/register4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deposit" />

</androidx.constraintlayout.widget.ConstraintLayout>